--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ a:link {
 	color: white; 
 	text-decoration: none;
 	font-weight: bold; 
-	text-shadow: 2px 2px 2px #848484; 
+	text-shadow: 2px 2px 2px white; 
 	line-height: 2.0;
 	
 }
