--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ a:link {
 	
 }
 a:hover {text-decoration: underline;}
-a:visited {color: gray;}
+a:visited {color: white;}
 
 .careerInterests {
 	font-weight: normal; 
