--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ a:link {
 	color: white; 
 	text-decoration: none;
 	font-weight: bold; 
-	text-shadow: 1px 1px 1px white; 
+	text-shadow: 1px 1px 1px rgb(227, 227, 227); 
 	line-height: 2.0;
 	
 }
